--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="defaultNavbar1">
       <ul class="nav navbar-nav navbar">
-        <li><a href="#">Home</a></li>
-       <li><a href="#">About Us</a></li>
-       <li><a href="#">Why Organic?</a></li>
-	       <li><a href="#">Farm Shop</a></li>
-       <li><a href="#">FAQ</a></li>
-	      <li><a href="#">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+       <li><a href="about-us.html">About Us</a></li>
+       <li><a href="why-organic.html">Why Organic?</a></li>
+	       <li><a href="farm-shop.html">Farm Shop</a></li>
+       <li><a href="faq.html">FAQ</a></li>
+	      <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
 	  </div>
@@ -325,17 +325,17 @@
     
      <div class="col-sm-4 text-left">
 	      <h4>Useful Links</h4>
-<ul class="new-list1"><li><a href="/"><i class="fa fa-angle-right arrow" aria-hidden="true"></i> Home</a></li>
+<ul class="new-list1"><li><a href="index.html"><i class="fa fa-angle-right arrow" aria-hidden="true"></i> Home</a></li>
 
-<li><a href=""><i class="fa fa-angle-right arrow" aria-hidden="true"></i> About Us</a></li>
+<li><a href="about-us.html"><i class="fa fa-angle-right arrow" aria-hidden="true"></i> About Us</a></li>
 
-<li><a href=""><i class="fa fa-angle-right arrow" aria-hidden="true"></i> Why Organic?</a></li>
+<li><a href="why-organic.html"><i class="fa fa-angle-right arrow" aria-hidden="true"></i> Why Organic?</a></li>
 
-<li><a href=""><i class="fa fa-angle-right arrow" aria-hidden="true"></i> Farm Shop</a></li>
+<li><a href="farm-shop.html"><i class="fa fa-angle-right arrow" aria-hidden="true"></i> Farm Shop</a></li>
 	
-<li><a href=""><i class="fa fa-angle-right arrow" aria-hidden="true"></i> FAQ</a></li>
+<li><a href="faq.html"><i class="fa fa-angle-right arrow" aria-hidden="true"></i> FAQ</a></li>
  
- <li><a href=""><i class="fa fa-angle-right arrow" aria-hidden="true"></i> Contact Us</a></li>
+ <li><a href="contact.html"><i class="fa fa-angle-right arrow" aria-hidden="true"></i> Contact Us</a></li>
 	
 </ul>  
      
